--- a/Final Report/Reflections/.md
+++ b/Final Report/Reflections/.md
@@ -1,16 +1,78 @@
-In our group, I held the Enthusiast Puppy role. During this project, I always try to be enthusiastic, I went to all the group meeting, joined the group chat and shared my ideas about each part of the project. I also listened and supported the creation of new ideas, helped and developed the ideas innovative solutions to challenges during each part of the project. During the whole project, I think I performed well in this role.
+In our group, I held the Enthusiast Puppy role. During this project, I always 
+try to be enthusiastic, I went to all the group meeting, joined the group chat 
+and shared my ideas about each part of the project. I also listened and 
+supported the creation of new ideas, helped and developed the ideas innovative 
+solutions to challenges during each part of the project. During the whole 
+project, I think I performed well in this role.
 
-In the beginning of the project, each team member was trying to fit their own role. Eventually, everyone performed their role effectively. But it is worth noting that everyone is so busy at this end of semester moment, there is not all the time all team member can fully perform their own role during the project, because everyone has different timetable of their study and work which can cause time conflict of some parts of the project schedule. Under this situation, I think the most important thing is to meet the deadline of each task, so even some group members could not do the certain task then to perform their role, but other team members were all happy to help and to cover their roles. For example, during the usability test task, we did not have all members to run it, but me, Rabbit and Owl three of us tried our best to run it, finally we got the results which is what exactly we expected. Our objective is to help the group progress, hence the roles under some situation was not that important than the project progress. On the other hand, no matter who covers whose role, everyone's goal is that this project can proceed smoothly and meet all deadlines. Hence, I think the role system is almost effective in our group.
+In the beginning of the project, each team member was trying to fit their own 
+role. Eventually, everyone performed their role effectively. But it is worth 
+noting that everyone is so busy at this end of semester moment, there is not 
+all the time all team member can fully perform their own role during the 
+project, because everyone has different timetable of their study and work which 
+can cause time conflict of some parts of the project schedule. Under this
+situation, I think the most important thing is to meet the deadline of each 
+task, so even some group members could not do the certain task then to perform 
+heir role, but other team members were all happy to help and to cover their 
+roles. For example, during the usability test task, we did not have all members 
+to run it, but me, Rabbit and Owl three of us tried our best to run it, 
+finally we got the results which is what exactly we expected. Our objective 
+is to help the group progress, hence the roles under some situation was not
+that important than the project progress. On the other hand, no matter who 
+covers whose role, everyone's goal is that this project can proceed smoothly 
+and meet all deadlines. Hence, I think the role system is almost effective in 
+our group.
 
-In the creation of the prototype, I was mainly doing the project management tool of the app. During the user testing, I was a test observer. And I did some updates for the prototype after user testing, I also helped to link all the changes of the prototype which are from other group members into a final version of the prototype. In the part of user testing, I contacted with other group’s members and invited them to be our group’s participants for the user testing. And I also was a tester for team 1. During the testing process, I was a silent observer and I assists the data logger in identifying problems, concerns, coding bugs, and procedural errors. For instance, we was expecting 10 minutes for each testing period, but each testing actually took about 25 minutes which means all the testing schedule was changed so that I must communicate with other participants and arrange  new time for them, we were so lucky , the participants are all really nice, they wold like to wait rather than request an new testing time for another day.  Therefore, the half of the testing time I didn’t take notes from user, but I was happy to make our participants come in right time,  make our testing process go smoothly and we do not need to find another testing day, saved time and also get more time for our fixing of the prototype.
+In the creation of the prototype, I was mainly doing the project management 
+tool of the app. During the user testing, I was a test observer. And I did 
+some updates for the prototype after user testing, I also helped to link all
+the changes of the prototype which are from other group members into a final 
+version of the prototype. In the part of user testing, I contacted with other 
+group’s members and invited them to be our group’s participants for the user 
+testing. And I also was a tester for team 1. During the testing process, I was 
+a silent observer and I assists the data logger in identifying problems, 
+concerns, coding bugs, and procedural errors. For instance, we was expecting 
+10 minutes for each testing period, but each testing actually took about 25
+minutes which means all the testing schedule was changed so that I must 
+communicate with other participants and arrange  new time for them, we 
+were so lucky , the participants are all really nice, they wold like to wait 
+rather than request an new testing time for another day.  Therefore, the half
+of the testing time I didn’t take notes from user, but I was happy to make our 
+participants come in right time,  make our testing process go smoothly and we 
+do not need to find another testing day, saved time and also get more time for
+our fixing of the prototype.
+
 
 This is the link here that shows the specific issues assigned to me.   
 
 
 Reflection
 
-I am so proud of me and other group members finished the usability test task so well, we got lots of pertinent advises from our participants. Those feedback is the reflection of our prototype. I really understood, the first significant thing of the user interface design which is that we need to know the needs of users. And I understood what does the user think by I was being a participant to test other groups prototype. I’m so lucky to work with everybody in this team, everyone has a strong sense of responsibility, we helped each other, solved difficulties and shared load. We all put on efforts for our project, especially I like we share ideas and then assigned tasks for everyone.
+I am so proud of me and other group members finished the usability test task 
+so well, we got lots of pertinent advises from our participants. Those feedback 
+is the reflection of our prototype. I really understood, the first significant 
+thing of the user interface design which is that we need to know the needs of 
+users. And I understood what does the user think by I was being a participant 
+to test other groups prototype. I’m so lucky to work with everybody in this
+team, everyone has a strong sense of responsibility, we helped each other, 
+solved difficulties and shared load. We all put on efforts for our project, 
+especially I like we share ideas and then assigned tasks for everyone.
 
-During this course, I learnt the importance of the visual effect and the function of an interface. I am really interested in data visualization, I am learning lots of statistics papers, I think I will use what I learnt from this course to process my statistical graphs in the future. On the other hand, I really like the strategy of the animal roles, it gave us a good explanation and a good lead for a group project, in my experience, I had a group project last year, we were 5 people in the group, but we did not organized so well, but the idea of the animal role, actually it gives the idea about how the group member should take the right role during a group project to make the project finish on time and team working successfully. 
+During this course, I learnt the importance of the visual effect and the
+function of an interface. I am really interested in data visualization, 
+I am learning lots of statistics papers, I think I will use what I learnt 
+from this course to process my statistical graphs in the future. On the 
+other hand, I really like the strategy of the animal roles, it gave us a 
+good explanation and a good lead for a group project, in my experience, I had 
+a group project last year, we were 5 people in the group, but we did not 
+organized so well, but the idea of the animal role, actually it gives the 
+idea about how the group member should take the right role during a group
+project to make the project finish on time and team working successfully. 
 
-In my group, everyone contributes to how well the group succeeds overall. We were having the right people in the correct roles. The success of our team is that we get input from everyone involved. Because we have certain people to lead our group, someone who manages the agenda, someone who facilitates the group meeting, someone develops ideas and someone checks for leaks, each one is a leader of the different part. It seems like it is a big team which has 6 people. In fact, everyone takes important role.
+In my group, everyone contributes to how well the group succeeds overall. 
+We were having the right people in the correct roles. The success of our team 
+is that we get input from everyone involved. Because we have certain people to
+lead our group, someone who manages the agenda, someone who facilitates the 
+group meeting, someone develops ideas and someone checks for leaks, each one 
+is a leader of the different part. It seems like it is a big team which has 6 
+people. In fact, everyone takes important role.
