--- a/Final Report/Reflections/.md
+++ b/Final Report/Reflections/.md
@@ -1,78 +1,11 @@
-In our group, I held the Enthusiast Puppy role. During this project, I always 
-try to be enthusiastic, I went to all the group meeting, joined the group chat 
-and shared my ideas about each part of the project. I also listened and 
-supported the creation of new ideas, helped and developed the ideas innovative 
-solutions to challenges during each part of the project. During the whole 
-project, I think I performed well in this role.
-
-In the beginning of the project, each team member was trying to fit their own 
-role. Eventually, everyone performed their role effectively. But it is worth 
-noting that everyone is so busy at this end of semester moment, there is not 
-all the time all team member can fully perform their own role during the 
-project, because everyone has different timetable of their study and work which 
-can cause time conflict of some parts of the project schedule. Under this
-situation, I think the most important thing is to meet the deadline of each 
-task, so even some group members could not do the certain task then to perform 
-heir role, but other team members were all happy to help and to cover their 
-roles. For example, during the usability test task, we did not have all members 
-to run it, but me, Rabbit and Owl three of us tried our best to run it, 
-finally we got the results which is what exactly we expected. Our objective 
-is to help the group progress, hence the roles under some situation was not
-that important than the project progress. On the other hand, no matter who 
-covers whose role, everyone's goal is that this project can proceed smoothly 
-and meet all deadlines. Hence, I think the role system is almost effective in 
-our group.
-
-In the creation of the prototype, I was mainly doing the project management 
-tool of the app. During the user testing, I was a test observer. And I did 
-some updates for the prototype after user testing, I also helped to link all
-the changes of the prototype which are from other group members into a final 
-version of the prototype. In the part of user testing, I contacted with other 
-groupâ€™s members and invited them to be our groupâ€™s participants for the user 
-testing. And I also was a tester for team 1. During the testing process, I was 
-a silent observer and I assists the data logger in identifying problems, 
-concerns, coding bugs, and procedural errors. For instance, we was expecting 
-10 minutes for each testing period, but each testing actually took about 25
-minutes which means all the testing schedule was changed so that I must 
-communicate with other participants and arrange  new time for them, we 
-were so lucky , the participants are all really nice, they wold like to wait 
-rather than request an new testing time for another day.  Therefore, the half
-of the testing time I didnâ€™t take notes from user, but I was happy to make our 
-participants come in right time,  make our testing process go smoothly and we 
-do not need to find another testing day, saved time and also get more time for
-our fixing of the prototype.
-
-
-This is the link here that shows the specific issues assigned to me.   
-
-
-Reflection
-
-I am so proud of me and other group members finished the usability test task 
-so well, we got lots of pertinent advises from our participants. Those feedback 
-is the reflection of our prototype. I really understood, the first significant 
-thing of the user interface design which is that we need to know the needs of 
-users. And I understood what does the user think by I was being a participant 
-to test other groups prototype. Iâ€™m so lucky to work with everybody in this
-team, everyone has a strong sense of responsibility, we helped each other, 
-solved difficulties and shared load. We all put on efforts for our project, 
-especially I like we share ideas and then assigned tasks for everyone.
-
-During this course, I learnt the importance of the visual effect and the
-function of an interface. I am really interested in data visualization, 
-I am learning lots of statistics papers, I think I will use what I learnt 
-from this course to process my statistical graphs in the future. On the 
-other hand, I really like the strategy of the animal roles, it gave us a 
-good explanation and a good lead for a group project, in my experience, I had 
-a group project last year, we were 5 people in the group, but we did not 
-organized so well, but the idea of the animal role, actually it gives the 
-idea about how the group member should take the right role during a group
-project to make the project finish on time and team working successfully. 
-
-In my group, everyone contributes to how well the group succeeds overall. 
-We were having the right people in the correct roles. The success of our team 
-is that we get input from everyone involved. Because we have certain people to
-lead our group, someone who manages the agenda, someone who facilitates the 
-group meeting, someone develops ideas and someone checks for leaks, each one 
-is a leader of the different part. It seems like it is a big team which has 6 
-people. In fact, everyone takes important role.
+"z.®
+èº’!zWm…á'¶¬‰«->êiÊº%x;«Šx-†+)®ˆÞrÒ—²²Úò¶†Þz{aºÈš²Øœ#§¶Ú–[az
+èº™žzØ§‚:"çm…è+¢ê\…«ZÛ!j·›(y«n‹­y§!¥ªí¡ûazšèç-!©l¢X¬µéÞu©Ý²êi¢»^vØ^r·š¶*'¡ùÞÂ'^jÈ^–—jw]z÷¥¢—¶¢uæ¬Šyè½«b½ë(–ëb¢{-¡ÈZ–W§ëº¸§æœ†–«¶‡í…êk¢7œ´;«Šx-…ì!¢W©®ˆÞrÒ-†)ä"—«~ŠæyÜ–X§¶¬®‰^"{ay· Šyâž
+¶©®ˆÞr×šr^již™·«Á«-¯(§‚ÚŠÛaz*èÂzè•á/z{njYrz÷«Ê‰Þ¥êß¢¹žvØ^Šºè•çŸ}ç-Š÷¥È­ŠØ¬ÂŠí†z-Šx-…«^½êò¢w¢²ÊºÌš¶Øb±éÝ¡û™ë-z¹¨™éí¶«z+'¢Ö¥–Ø^¶)žjYmy©¦zfÞ­Æ§~éeÊ—«~Šæ¶¢®Œ'®‰^vêâžazšèç-mçºÇž½êò¢w¡jÇb}÷«z{mŠg­i¹^¡ûaz*ì¶çrjwp¢¹0†'!q©Üjë¶)žr‰ß–'-¡û(™êZ®Û(~Ø^¦º#yËlrºW”×«¶¬²+njØ¨œ‹aŠy-…é¨²Ø¦¦Šíj{m†)àŠËh™ç­¶y§eŠw¨}æœ†Ö¬’Ê½éì¢g ®‹©™é›z»¢é]ž‹]¢Ø^qêíj)íjÉ-…éí¢—«~Šæ…è«®‰^nëh¶«µæ¦™é›z»0z·š–XZ¦œ­¢¥¥©Ý¶‡(½êí…è«®‰^°Z+{¦¦Wº¸§‚Ø^ºÆ›ŠX­Ê×¬¶Ö¬“‰Ùè¶¯y©e™é›z»-¢»§ŠÖî¶g‘i¶âµ©Ý;	m†·ž¡û¬¶¸žv‹«më-¶Šîž+_Šv¥—,‚‹m…êÞ²ém³br¬Â­{œ¶\°yìiyË^të«¡¸ÞrØ¯z+-¢¥¦Ø^‚º.¦šè‚·¬²§qëazº%zË§uêì¢g¬ŠÛš¶*'Á«'¢ÛajØ¦¦Šíj{m…©í…êk¢7œ¶šè‚·¬°éí…ê-…êájwg¢f­µêð†‡(½êìÂ,zº%yëÞ¯*'zÈ(jX¬¶­¶¬¦º#yË\jzk¡ÇžvÉ¨¢ØeÉ©Ý™ç­jY]y§eŠw¬éÜx‹aŠy-…êè•ë2²×¦ŠÆ¥š‹-y÷ÞrØ¯z)èº¸+¢êHžØ^r·š¶*'¡ûazšè¶‹r¥â0jÉšŠyrvˆ§‚Ø^¦º#yËfjv zg§¶Ú(–‡í…æ©¤;«Šx-…ë¬z»^²Ø§€Œ±«^²Ú±êïz°'t‡bvÊ&zê]j×¬~Ší…êk¢Ú-Ê—š~×«ºÇ«µë-Šxj[(…éiyÛh–)äjYm…ç!jx²‡í…êk¢Ú-Ê—°†'!j·Ÿ®‰¨¶«‚º.¦g¦mêìŠ{hiø§j[Þ®È¨ž‡í…êk¢Ú-Ê—ˆžØ^¥ªí¡û¬z»^²Ø§€‡(žÖœµçpŠØh¶«‚º.¦Éž™·«±©ÝŠ{âµçm…é­¡·¨º¸+¢êl¥ªí‰È©j{l~Ší…ë¬z»^²Ø§€	Ý!©l£¬j×¬µêß¢»^jmCº¸§‚Ø^µë-Šx)®‡²Â0jÆ¬ŠW§¶†ìz»Þ­©Ý!«,ŠËl¶jÖ¥¢®)âuéí‰ü¢ž
+k¡¹^šÇ(Ç«žÇ(v)ànè,jwi®‡vêÚ•êë¢»¢¸§²Ö§qìÁ«Æ—œ¶)à×I¢žë^±ú+y§!µë-Šx)z¸¨u»­y§!µë-ŠxrÛš–\­¢‰n‹­Û™¢žë^³bržj{–[az×¬¶)à±È^vé^Á«…©àyÛ(¶­"k¬µÊ&šéâq«^Â+a¢Ø^®–«¶'"¥©í±©ÝjºÚž§{b™çè®Ø^›°z·¬¢[œ“+az–«¶'"¥©í±ªÞjYky©eÊxœzØ^Ë
+%vX¤zÚ0j+kjØ^®ØZž·ª¹ë-jyÞÂ×¬¶)à¶)ž~ŠÚž‹az·ZÉ8^­çè­ëaz¥~‡í…ë^²Ø§‚Ø¦x‡bv{mjG§¢×¬~º&ºÇ«nëHÁ«!jšr¶‰š‘ê.®–«¶'"¥©í±Ê&z)ëŠm¶)ž™©¢êízËbž
+k¡Ç¬²
+,šŠ-†\šÜv‰è¶wžvÚŠwZž‹az»^²Ø§Ö²±«ÞvØ¦y©Ýj[(ëf¢·­ŠgŸ¢º.­ø±Šx(~Ø^¦º-¢Ü©y8b²+-…ébžH^­ëajÛ!£-…ë)yÈŸ‰È¬²ç¬jË"‚w¶‰žEçåyËb¢ršÊ)®‹¡ùžjwh¶«‚º.¦g¦mêì~)â²¶®±¦â–+rµë-µ«$²Œ–\‚‹e¢Û(~—«¶)ÞžÖ¾+±úèš‹«¥ªí‰È©j{lN,y÷žu¶œ’+-…êÞ~Wœ¶*'¡ú.®šè¶‹r¥â+y©eÊéÝz»-¢‡m…çâ®ËlŠ	â~'žÛaŠx(~Ø^ºÇ«Š{^­öœy×¬Š	ð†'!ŠËajÜç¶‰'£azwžvÊºÇ«°	Ý"éÝz»-¢‡p…«]¡ë-…ë¬z»aŠyÈŒ±·¢ž©j»br*ZžÛhµë-¢Ø^®
+èº›)®‹h·*^"k(–ç$ÊÚ0¢¹0ŠØ^½êòn‡rŠ{aŠË^jg¯z¼¨èZ±«-®‰à±éìz‡ëzÊhžÈ›ŠX­Ë¡zZ^uæœ†‹az»(–÷v'ß‰Ë¥¶'¬jwl…ªÞvZugš–Zn¶‰Þ}ú+¶Çè®‹«¦º#yË^²—œ‰©eÈ‰b‘ì²«z'^jÆ§vØ^«,Š	ÞvÖ¬’Çè­ëÞ¯*'x;«Šx-†+¢êìx‰^j¹í¶¢šš+µ©Üz‡í…ëâ²æ¥y÷ÞrÖ§vØ^~éÜ¶*'¡ö§Š{^­öœx†¦­æ¥—(§µêÞ²×ŠwZµ«â²æ¥‹6­Š‰Èji^j¹âž	h¶Ê²Ö­ŠËbrÊZ¥êì"ØbžB0ŠYn±ì!jÒ%yªçµúèšØb±Ê.®Ç­¢šèqë,›+-jØ¬¶'–
+Ú¦"žØ^~ën­ã§¶¨¶«…©Ý"·š–\¥ŠG­…ë-­«^ƒ*¶šž)š–º%zÈ­«ÞºÆ ¢‡^Æ™Z«b¢v§u¨(¡Ù^i×è­¨+¢êi®ˆÞrØ§›'±¥êâzw"j
+èºšk¢7œ¶V¬·'š¯°z·¹¥ê)•è§¶ ®‹©nëpyØž‹h®§‹7²Œ–Vî¶Ø^‰×š¡ûay©â™©k¢WšrÛš–\¢¶¯zËaz'^i¦èºØhÂØ^‚º.¦g¦mêì†‹¥vÖ¤zØ^®(!¶º%yÛ«Šx‚º.¦šèç-¶‰š‘ëazšèç-~)â²'¶)žjwmy©°¢¹"ž.qÇ¬±û¥—"'›(+¢ê^½êò¢wœ¢{k‰»­zËh†Œ0zYm…è+¢êl¹ÇyÛ(½êÚ–UžÁêÞ…«âžaz¸ †Ú^¢™^Š{ayÊ+­ç-®‰^±8^²çzË(~‹«µæ¦ŠËajÜëbž›­~º&z÷«Ê‰ÞŠ{è–÷çºÇ°z¯yÇ«µ¨§¥ê)•ëh•æ¢êà®‹©²‰ž¢w°†‰š¨²Ø^j§u«(™ê'{h}§"–+Zµë-…è+¢êfyëbž(™ê'y×¯zZ)²'^jÆ§vÊ&z‰Þrœ’Çè®Wš’Çšr'z+•æzº¶‰÷Þ­éí¥ªí"Ûzk%ŠG¢¶+n(-y©°†'!…«:¥ê)•â'}§-z÷«Ê‰Þµ©²)©¢»ZžÚè•
