--- a/Final Report/Reflections/.md
+++ b/Final Report/Reflections/.md
@@ -1,11 +1,11 @@
-"z.®
-èº’!zWm…á'¶¬‰«->êiÊº%x;«Šx-†+)®ˆÞrÒ—²²Úò¶†Þz{aºÈš²Øœ#§¶Ú–[az
-èº™žzØ§‚:"çm…è+¢ê\…«ZÛ!j·›(y«n‹­y§!¥ªí¡ûazšèç-!©l¢X¬µéÞu©Ý²êi¢»^vØ^r·š¶*'¡ùÞÂ'^jÈ^–—jw]z÷¥¢—¶¢uæ¬Šyè½«b½ë(–ëb¢{-¡ÈZ–W§ëº¸§æœ†–«¶‡í…êk¢7œ´;«Šx-…ì!¢W©®ˆÞrÒ-†)ä"—«~ŠæyÜ–X§¶¬®‰^"{ay· Šyâž
-¶©®ˆÞr×šr^již™·«Á«-¯(§‚ÚŠÛaz*èÂzè•á/z{njYrz÷«Ê‰Þ¥êß¢¹žvØ^Šºè•çŸ}ç-Š÷¥È­ŠØ¬ÂŠí†z-Šx-…«^½êò¢w¢²ÊºÌš¶Øb±éÝ¡û™ë-z¹¨™éí¶«z+'¢Ö¥–Ø^¶)žjYmy©¦zfÞ­Æ§~éeÊ—«~Šæ¶¢®Œ'®‰^vêâžazšèç-mçºÇž½êò¢w¡jÇb}÷«z{mŠg­i¹^¡ûaz*ì¶çrjwp¢¹0†'!q©Üjë¶)žr‰ß–'-¡û(™êZ®Û(~Ø^¦º#yËlrºW”×«¶¬²+njØ¨œ‹aŠy-…é¨²Ø¦¦Šíj{m†)àŠËh™ç­¶y§eŠw¨}æœ†Ö¬’Ê½éì¢g ®‹©™é›z»¢é]ž‹]¢Ø^qêíj)íjÉ-…éí¢—«~Šæ…è«®‰^nëh¶«µæ¦™é›z»0z·š–XZ¦œ­¢¥¥©Ý¶‡(½êí…è«®‰^°Z+{¦¦Wº¸§‚Ø^ºÆ›ŠX­Ê×¬¶Ö¬“‰Ùè¶¯y©e™é›z»-¢»§ŠÖî¶g‘i¶âµ©Ý;	m†·ž¡û¬¶¸žv‹«më-¶Šîž+_Šv¥—,‚‹m…êÞ²ém³br¬Â­{œ¶\°yìiyË^të«¡¸ÞrØ¯z+-¢¥¦Ø^‚º.¦šè‚·¬²§qëazº%zË§uêì¢g¬ŠÛš¶*'Á«'¢ÛajØ¦¦Šíj{m…©í…êk¢7œ¶šè‚·¬°éí…ê-…êájwg¢f­µêð†‡(½êìÂ,zº%yëÞ¯*'zÈ(jX¬¶­¶¬¦º#yË\jzk¡ÇžvÉ¨¢ØeÉ©Ý™ç­jY]y§eŠw¬éÜx‹aŠy-…êè•ë2²×¦ŠÆ¥š‹-y÷ÞrØ¯z)èº¸+¢êHžØ^r·š¶*'¡ûazšè¶‹r¥â0jÉšŠyrvˆ§‚Ø^¦º#yËfjv zg§¶Ú(–‡í…æ©¤;«Šx-…ë¬z»^²Ø§€Œ±«^²Ú±êïz°'t‡bvÊ&zê]j×¬~Ší…êk¢Ú-Ê—š~×«ºÇ«µë-Šxj[(…éiyÛh–)äjYm…ç!jx²‡í…êk¢Ú-Ê—°†'!j·Ÿ®‰¨¶«‚º.¦g¦mêìŠ{hiø§j[Þ®È¨ž‡í…êk¢Ú-Ê—ˆžØ^¥ªí¡û¬z»^²Ø§€‡(žÖœµçpŠØh¶«‚º.¦Éž™·«±©ÝŠ{âµçm…é­¡·¨º¸+¢êl¥ªí‰È©j{l~Ší…ë¬z»^²Ø§€	Ý!©l£¬j×¬µêß¢»^jmCº¸§‚Ø^µë-Šx)®‡²Â0jÆ¬ŠW§¶†ìz»Þ­©Ý!«,ŠËl¶jÖ¥¢®)âuéí‰ü¢ž
-k¡¹^šÇ(Ç«žÇ(v)ànè,jwi®‡vêÚ•êë¢»¢¸§²Ö§qìÁ«Æ—œ¶)à×I¢žë^±ú+y§!µë-Šx)z¸¨u»­y§!µë-ŠxrÛš–\­¢‰n‹­Û™¢žë^³bržj{–[az×¬¶)à±È^vé^Á«…©àyÛ(¶­"k¬µÊ&šéâq«^Â+a¢Ø^®–«¶'"¥©í±©ÝjºÚž§{b™çè®Ø^›°z·¬¢[œ“+az–«¶'"¥©í±ªÞjYky©eÊxœzØ^Ë
-%vX¤zÚ0j+kjØ^®ØZž·ª¹ë-jyÞÂ×¬¶)à¶)ž~ŠÚž‹az·ZÉ8^­çè­ëaz¥~‡í…ë^²Ø§‚Ø¦x‡bv{mjG§¢×¬~º&ºÇ«nëHÁ«!jšr¶‰š‘ê.®–«¶'"¥©í±Ê&z)ëŠm¶)ž™©¢êízËbž
-k¡Ç¬²
-,šŠ-†\šÜv‰è¶wžvÚŠwZž‹az»^²Ø§Ö²±«ÞvØ¦y©Ýj[(ëf¢·­ŠgŸ¢º.­ø±Šx(~Ø^¦º-¢Ü©y8b²+-…ébžH^­ëajÛ!£-…ë)yÈŸ‰È¬²ç¬jË"‚w¶‰žEçåyËb¢ršÊ)®‹¡ùžjwh¶«‚º.¦g¦mêì~)â²¶®±¦â–+rµë-µ«$²Œ–\‚‹e¢Û(~—«¶)ÞžÖ¾+±úèš‹«¥ªí‰È©j{lN,y÷žu¶œ’+-…êÞ~Wœ¶*'¡ú.®šè¶‹r¥â+y©eÊéÝz»-¢‡m…çâ®ËlŠ	â~'žÛaŠx(~Ø^ºÇ«Š{^­öœy×¬Š	ð†'!ŠËajÜç¶‰'£azwžvÊºÇ«°	Ý"éÝz»-¢‡p…«]¡ë-…ë¬z»aŠyÈŒ±·¢ž©j»br*ZžÛhµë-¢Ø^®
-èº›)®‹h·*^"k(–ç$ÊÚ0¢¹0ŠØ^½êòn‡rŠ{aŠË^jg¯z¼¨èZ±«-®‰à±éìz‡ëzÊhžÈ›ŠX­Ë¡zZ^uæœ†‹az»(–÷v'ß‰Ë¥¶'¬jwl…ªÞvZugš–Zn¶‰Þ}ú+¶Çè®‹«¦º#yË^²—œ‰©eÈ‰b‘ì²«z'^jÆ§vØ^«,Š	ÞvÖ¬’Çè­ëÞ¯*'x;«Šx-†+¢êìx‰^j¹í¶¢šš+µ©Üz‡í…ëâ²æ¥y÷ÞrÖ§vØ^~éÜ¶*'¡ö§Š{^­öœx†¦­æ¥—(§µêÞ²×ŠwZµ«â²æ¥‹6­Š‰Èji^j¹âž	h¶Ê²Ö­ŠËbrÊZ¥êì"ØbžB0ŠYn±ì!jÒ%yªçµúèšØb±Ê.®Ç­¢šèqë,›+-jØ¬¶'–
-Ú¦"žØ^~ën­ã§¶¨¶«…©Ý"·š–\¥ŠG­…ë-­«^ƒ*¶šž)š–º%zÈ­«ÞºÆ ¢‡^Æ™Z«b¢v§u¨(¡Ù^i×è­¨+¢êi®ˆÞrØ§›'±¥êâzw"j
-èºšk¢7œ¶V¬·'š¯°z·¹¥ê)•è§¶ ®‹©nëpyØž‹h®§‹7²Œ–Vî¶Ø^‰×š¡ûay©â™©k¢WšrÛš–\¢¶¯zËaz'^i¦èºØhÂØ^‚º.¦g¦mêì†‹¥vÖ¤zØ^®(!¶º%yÛ«Šx‚º.¦šèç-¶‰š‘ëazšèç-~)â²'¶)žjwmy©°¢¹"ž.qÇ¬±û¥—"'›(+¢ê^½êò¢wœ¢{k‰»­zËh†Œ0zYm…è+¢êl¹ÇyÛ(½êÚ–UžÁêÞ…«âžaz¸ †Ú^¢™^Š{ayÊ+­ç-®‰^±8^²çzË(~‹«µæ¦ŠËajÜëbž›­~º&z÷«Ê‰ÞŠ{è–÷çºÇ°z¯yÇ«µ¨§¥ê)•ëh•æ¢êà®‹©²‰ž¢w°†‰š¨²Ø^j§u«(™ê'{h}§"–+Zµë-…è+¢êfyëbž(™ê'y×¯zZ)²'^jÆ§vÊ&z‰Þrœ’Çè®Wš’Çšr'z+•æzº¶‰÷Þ­éí¥ªí"Ûzk%ŠG¢¶+n(-y©°†'!…«:¥ê)•â'}§-z÷«Ê‰Þµ©²)©¢»ZžÚè•
+"z.
+èº’!zWm'->iÊº%x;x-+)rz{aÈšØœ#[az
+èº™zØ§:"m+\Z!j(yny!az-!lXuÝ²i^v^r*''^j^jw]zuæ¬Šyè½«b(b{-ZWæœ†k7;x-!Wr-)"~yX^"{ayy
+r×šr^ji-(az*z/z{njYrzÊ‰Þ¥ß¢v^}-Ø¬ÂŠz-x-^wÌšbÝ¡-zz+'Ö¥^)jYmyzfÞ­Æ§~eÊ—~'^vaz-mÇžwjb}z{mgi^az*rjwp0'!qj)rß–'-(Z(~^#ylrW×«+njØ¨ay-é¨²Ø¦j{m)hç­¶yew}æœ†Ö¬gz]]^qj)j-~è«®^nhæ¦™z0zXZÝ¶(è«®^Z+{W^Æ›X×¬Ö¬yez-giâµ©;	mvm-+_v,mÞ²mbr{\yiy^të«¡rØ¯z+-^.è‚·qaz%zË§ugÛš*''ajØ¦j{mk7è‚·-jwgf(,z%yÞ¯*'z(jX#y\jzkÇžvÉ¨eÉ©Ý™jY]yewxay-2×¦Æ¥-yrØ¯z)èº¸+H^r*'azè¶‹r0jÉšyrv^#yfjvzg(æ©¤;x-z^Ø§^z'tbv&z]j×¬~k-Ê—~×«Ç«-xj[(iyh)jYm!jxk-Ê—'!j.gm{hij[Þ®È¨k-Ê—^z^Ø§(Öœph.ÉžÝŠ{mé­¡+lÈ©j{l~z^Ø§	!lj×¬ß¢^jmC^-x)0jÆ¬WzÞ­!,ljÖ¥)u
+k^(Ç«(v)n,jwivÚ•ë¢»Ö§qÆ—)I^+y!-x)zuy!-xrÛš\nÛ™^brj{[az×¬)^v^y("k&q^+a^'"jÚž{b^z[+az'"jYkyexz^
+%vXz0j+kj^Z-jy×¬))~ÚžazZ8^az~^Ø§Ø¦xbv{mjG×¬~&Ç«nH!jr.'"&z)m)zb
+kÇ¬
+,-\vwvwZaz^Ø§Ö²vØ¦yj[(fg.x(~^-Ü©y8b+-bH^aj!-)yÈŸÈ¬j"wEybr)jwh.gm~)+r-$\e(~)ÞžÖ+èš‹È©j{lN,yu+-~W*'.è¶‹r+yez-ml	~'ax(~^Ç«{^y×¬	'!ajç¶'azwvÇ«	"z-p]-zayÈŒjbr*Zh-^
+èº›)h*^"k($00^nr{a^jgzZ-zzhÈ›XzZ^uæœ†az(v'ß‰Ë¥'jwlvZugZn}+è®‹#y^eÈ‰bz'^jÆ§v^,	vÖ¬Þ¯*'x;x-+x^j+zyrÖ§v^~Ü¶*'{^xæ¥—(Þ²×wZæ¥‹6ji^j	hÖ­brZ"bB0Yn!j%yb.Ç­q,+-jØ¬'
+Ú¦"^~nã§¶"\G-^*)%zÈ­ÞºÆ ^Æ™Zbvu(^iè­¨+irØ§'zw"j
+èºšk7V'z)è§¶npyØh7V^×šayâ™©kWrÛš\zaz'^ih^.gmì†‹vÖ¤z^(!%yÛ«x.-az-~)')jwmy".qÇ¬"'(+^w{kzh0zYm+ly(Ú–UÞ…az^^{ay+-^8^z(~æ¦Šajb~&zÊ‰ÞŠ{Ç°zyÇ«)hæ¢à®‹w^ju('{h}"+Z-+fyb('y×¯zZ)'^jÆ§v&zrWÇšr'z+zÞ­"zk%G+n(-y'!:)'}-zÊ‰Þµ)Z
